--- a/src/main/resources/templates/flagments/sidebar.html
+++ b/src/main/resources/templates/flagments/sidebar.html
@@ -17,14 +17,20 @@
                                     <ul class="nav navbar-nav mai-top-nav">
                                         <li class="nav-item"><a href="#" class="nav-link">Home</a>
                                         </li>
+                                        <li sec:authorize="hasAuthority('admin')" class="nav-item"><a th:href="@{/admin/user.html}" class="nav-link">User</a>
+                                        </li>
+                                        <li sec:authorize="hasAuthority('admin')" class="nav-item" ><a th:href="@{/admin/role/index.html}" class="nav-link">Role</a>
+                                        </li>
+                                        <li sec:authorize="hasAuthority('admin')" class="nav-item"><a th:href="@{/admin/employee.html}" class="nav-link">Employee</a>
+                                        </li>
                                         <li class="nav-item"><a th:href="@{/category/index.html}" class="nav-link">Category</a>
                                         </li>
                                         <li class="nav-item"><a th:href="@{/product/index.html}" class="nav-link">Product</a>
                                         </li>
-                                        <li class="nav-item" ><a th:href="@{/role/index.html}" class="nav-link">Role</a>
-                                        </li>
                                         <li class="nav-item"><a th:href="@{/supplier/index.html}" class="nav-link">Supplier</a>
                                         </li>
+
+
                                         <li class="nav-item"><a href="#" class="nav-link">Services</a>
                                         </li>
                                         <li class="nav-item dropdown">
