--- a/src/main/resources/templates/role/add.html
+++ b/src/main/resources/templates/role/add.html
@@ -29,7 +29,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="all-form-element-inner">
-                                        <form action="#" th:action="@{/role/add.html}" th:object="${role}" method="post">
+                                        <form action="#" th:action="@{/admin/role/add.html}" th:object="${role}" method="post">
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
